
* Valgrind now supports debuginfod, an HTTP server for distributing
  ELF/DWARF debugging information. When a debuginfo file cannot be
  found locally, Valgrind is able to query debuginfod servers for the
  file using its build-id. See the user manual for more information
  about debuginfod support.

* ==================== TOOL CHANGES ====================

* DHAT:

  - DHAT has been extended, with two new modes of operation. The new
    --mode=copy flag triggers copy profiling, which records calls to memcpy,
    strcpy, and similar functions. The new --mode=ad-hoc flag triggers ad hoc
    profiling, which records calls to the DHAT_AD_HOC_EVENT client request in
    the new dhat/dhat.h file. This is useful for learning more about hot code
    paths. See the user manual for more information about the new modes.

  - Because of these changes, DHAT's file format has changed. DHAT output
    files produced with earlier versions of DHAT will not work with this
    version of DHAT's viewer, and DHAT output files produced with this version
    of DHAT will not work with earlier versions of DHAT's viewer.

* Cachegrind:

* Callgrind:

* Massif:

* Memcheck:

* ==================== OTHER CHANGES ====================

* ==================== FIXED BUGS ====================

The following bugs have been fixed or resolved.  Note that "n-i-bz"
stands for "not in bugzilla" -- that is, a bug that was reported to us
but never got a bugzilla entry.  We encourage you to file bugs in
bugzilla (https://bugs.kde.org/enter_bug.cgi?product=valgrind) rather
than mailing the developers (or mailing lists) directly -- bugs that
are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

140178  open("/proc/self/exe", ...); doesn't quite work
140939 --track-fds reports leakage of stdout/in/err and doesn't respect -q