@@ -43,6 +43,11 @@ support for X86/macOS 10.13, AMD64/macOS 10.13 and nanoMIPS/Linux.
 
 * ==================== TOOL CHANGES ====================
 
+All the tools and their vgpreload libraries are now installed under
+libexec because they cannot be executed directly and should be run
+through the valgrind executable. This should be an internal, not user
+visible, change, but might impact valgrind packagers.
+
 * DHAT:
 
   - DHAT has been extended, with two new modes of operation. The new
@@ -133,6 +138,7 @@ where XXXXXX is the bug number as listed below.
 432809  VEX should support REX.W + POPF
 432861  PPC modsw and modsd give incorrect results for 1 mod 12
 432215  Add debuginfod functionality
+433323  Use pkglibexecdir as vglibdir
 433500  DRD regtest faulures when libstdc++ and libgcc debuginfo are installed
 n-i-bz  helgrind: If hg_cli__realloc fails, return NULL.
 
